--- a/src/assets/css/page.news.css
+++ b/src/assets/css/page.news.css
@@ -264,10 +264,19 @@ news
 /* -------------------------
 single
 ----------------------------*/
-body:has(.single__page) {
+/* body:has(.single__page) {
     background-image: url(../images/news/single_bg.svg);
     background-size: cover;
     background-repeat: repeat;
+} */
+.bg_fixed {
+    position: fixed;
+    width: 100%;
+    height: 103vh;
+    top: 0;
+    object-fit: cover;
+    z-index: -1;
+
 }
 .single__post {
     margin-top: 160px;
