--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -245,13 +245,13 @@ flow
     /* max-width: 1200px; */
 }
 .flow__item--slide img {
-    transform: scale(.8);
+    transform: scale(.79);
     transition: transform .3s;
 }
 
 .flow__item--slide .slick-center {
     margin-top: -30px;
-    transition: all 0.6s;
+    transition: all 0.6s cubic-bezier(0, 0, 0.2, 1);
 }
 .flow__item--slide img {
     border: 3px solid var(--textBlack);
