--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -245,21 +245,35 @@ flow
     /* max-width: 1200px; */
 }
 .flow__item--slide img {
-    transform: scale(.79);
     transition: transform .3s;
+    margin: 15px;
+}
+
+/* .flow__item--slide .slick-center {
+    margin-top: -30px;
+    transition: all 0.6s cubic-bezier(0, 0, 0.2, 1);
+} */
+.flow__item--slide .slick-slide {
+    transition: transform 0.3s ease;
+}
+.flow__item--slide .slick-list {
+    padding-top: 20px !important;
 }
 
 .flow__item--slide .slick-center {
-    margin-top: -30px;
-    transition: all 0.6s cubic-bezier(0, 0, 0.2, 1);
+    transform: translateY(-30px);
 }
 .flow__item--slide img {
     border: 3px solid var(--textBlack);
     height: auto;
     width: 380px;
 }
+.flow__item--slide .slick-slide.slick-current,
+.flow__item--slide .slick-slide.is-active-next {
+    transform: translateY(-30px);
+}
 .slick-dots {
-    bottom: 10px;
+    bottom: -4px;
 }
 .slick-dots li {
     margin: 0;
@@ -281,7 +295,7 @@ flow
     left: 51%;
 }
 .slick-next, .slick-prev {
-    top: 110%;
+    top: 115%;
     width: 50px;
     height: 50px;
     color: #fff;
@@ -872,7 +886,7 @@ introduction
     flow
     ----------------------------*/
     .service__flow {
-        padding: 60px 5.12vw;
+        padding: 60px 5.12vw 100px;
         border-top: 2px solid var(--textBlack);
         border-bottom: 2px solid var(--textBlack);
     }
@@ -926,21 +940,20 @@ introduction
         /* max-width: 1200px; */
     }
     .flow__item--slide img {
-        transform: scale(.8);
         transition: transform .3s;
     }
-
     .flow__item--slide .slick-center {
-        margin-top: 0;
+        transform: translateY(0px);
         transition: all 0.6s;
     }
     .flow__item--slide img {
         border: 3px solid var(--textBlack);
         height: auto;
-        width: 380px;
+        width: 350px;
+        box-sizing: border-box;
     }
     .slick-dots {
-        bottom: 0px;
+        bottom: -20px;
     }
     .slick-dots li {
         margin: 0;
@@ -960,7 +973,7 @@ introduction
         left: 52%;
     }
     .slick-next, .slick-prev {
-        top: 110%;
+        top: 118%;
         width: 40px;
         height: 40px;
         color: #fff;
