--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29,7 +29,7 @@ img {
   vertical-align: middle;
 }
 a {
-  color: #000;
+  color: var(--textBlack);
   text-decoration: none;
 }
 a:hover {
@@ -376,7 +376,7 @@ nav menu
   top: -6px;
 }
 .tel__btn--icon img {
-  border: 2px solid #000;
+  border: 2px solid var(--textBlack);
   border-radius: 50%;
   height: 38px;
   width: 38px;
@@ -387,7 +387,7 @@ nav menu
 }
 .tel__btn .tel__telSpeech {
   align-items: center;
-  background: #000;
+  background: var(--textBlack);
   border-radius: 5px;
   color: #fff;
   display: flex;
@@ -409,7 +409,7 @@ nav menu
 .tel__btn .tel__telSpeech::after {
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 10px solid #000;
+  border-top: 10px solid var(--textBlack);
   bottom: -5px;
   content: "";
   height: 0;
@@ -657,7 +657,7 @@ footer
   width: 460px;
 }
 .footer__tel--icon img {
-  border: 3px solid #000;
+  border: 3px solid var(--textBlack);
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -668,7 +668,7 @@ footer
 }
 .footer__telSpeech {
   align-items: center;
-  background: #000;
+  background: var(--textBlack);
   border-radius: 5px;
   color: #fff;
   display: flex;
@@ -690,7 +690,7 @@ footer
 .footer__telSpeech::after {
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 10px solid #000;
+  border-top: 10px solid var(--textBlack);
   bottom: -5px;
   content: "";
   height: 0;
@@ -1079,14 +1079,20 @@ lower common
     font-size: var(--fontSize14);
     left: 15px;
   }
+  .footer__tel--icon img {
+    border: 2px solid var(--textBlack);
+  }
   .footer__telSpeech {
     font-size: var(--fontSize14);
+    font-size: 10px;
   }
   .footer__telSpeech.first {
-    left: 73px;
+    left: unset;
+    right: 74px;
   }
   .footer__telSpeech.second {
     right: -40px;
+    right: -10px;
   }
   .footerNav__list {
     grid-template-columns: 1fr 1fr;
@@ -1105,6 +1111,12 @@ lower common
   .footerBtn {
     font-size: var(--fontSize12);
     padding: 12px 16px;
+  }
+  .footer__telSpeech.first {
+    top: -35px;
+  }
+  .footer__telSpeech.second {
+    top: -35px;
   }
 }
 @media screen and (max-width:1000px) and (min-width:768px) {
@@ -1163,13 +1175,15 @@ lower common
   .footer__reception {
     font-size: var(--fontSize12);
   }
+  .footer__telSpeech {
+    font-size: 9px;
+    padding: 7px 4px;
+  }
   .footer__telSpeech.first {
-    font-size: var(--fontSize12);
-    left: 74px;
+    right: 70px;
   }
   .footer__telSpeech.second {
-    font-size: var(--fontSize12);
-    right: -30px;
+    right: -5px;
   }
 }
 @media screen and (max-width:767px) {
@@ -1363,7 +1377,7 @@ nav menu
     padding: 18px 0 24px 0;
   }
   .tel__btn--icon img {
-    border: 2px solid #000;
+    border: 2px solid var(--textBlack);
     border-radius: 50%;
     height: 26px;
     width: 26px;
@@ -1540,7 +1554,11 @@ footer
     border-radius: 10px;
     padding: 15px 0 30px;
   }
+  .footer__telSpeech {
+    font-size: var(--fontSize14);
+  }
   .footer__telSpeech.first {
+    right: unset;
     left: 102px;
   }
   .footer__telSpeech.second {
