--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -60,7 +60,7 @@ point
 }
 .point__column--title:after {
     border-top: 10px solid #64dc96;
-    bottom: -7px;
+    bottom: -6px;
 }
 .point__column--text {
     margin-top: 45px;
@@ -221,7 +221,7 @@ flow
 }
 .flow__item--title:after {
     border-top: 10px solid #fff;
-    bottom: -7px;
+    bottom: -6px;
 }
 .flow__inner {
     margin-top: 70px;
@@ -785,7 +785,7 @@ introduction
         border-left: 8px solid transparent;
         border-right: 8px solid transparent;
         border-top: 8px solid var(--textBlack);
-        bottom: -8px;
+        bottom: -10px;
     }
     .point__column--title:after {
         border-top: 8px solid #64dc96;
@@ -927,7 +927,7 @@ introduction
     }
     .flow__item--title:after {
         border-top: 8px solid #fff;
-        bottom: -6px;
+        bottom: -5px;
     }
     .flow__inner {
         margin-top: 40px;
@@ -963,7 +963,7 @@ introduction
     .flow__item--slide img {
         border: 2px solid var(--textBlack);
         height: auto;
-        width: 349px;
+        width: 89.48vw;
         box-sizing: border-box;
     }
     .slick-dots {
