--- a/src/assets/css/page.estimate.css
+++ b/src/assets/css/page.estimate.css
@@ -13,6 +13,14 @@ common
     outline: none;
 }
 input {
+	margin: 0;
+	padding: 0;
+	border: none;
+	border-radius: 0;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
     border-radius: 0;
     font-size: 16px;
 }
@@ -330,7 +338,7 @@ estimate form
 }
 .form__note p {
     font-size: var(--fontSize16);
-    font-weight: bold;
+    font-weight: 500;
     letter-spacing: 0.1rem;
     line-height: 1.8;
 }
@@ -508,7 +516,7 @@ estimate form
     }
     .confirm__btn--container input {
         height: 50px;
-        padding: 14px 35px;
+        padding: 10px 35px 12px;
     }
 }
 @media screen and (max-width:385px) {
