--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1278,7 +1278,8 @@ nav menu
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     z-index: 1000;
     font-family: var(--fontZenMaruGothic);
