--- a/src/assets/css/page.characters.css
+++ b/src/assets/css/page.characters.css
@@ -353,7 +353,7 @@ characters message
         position: absolute;
         bottom: -2px;
         left: -2px;
-        width: 350px;
+        width: 100%;
         height: 400px;
         border: 2px solid var(--textBlack);
         box-sizing: content-box;
