--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -28,3 +28,32 @@
         transform: translateX(120%);
     }
 }
+
+
+@keyframes animName {
+ 0%{
+    transform: rotate(0deg);
+   }
+100%{
+    transform: rotate(360deg);
+   }
+}
+
+@keyframes crescendo {
+  0%   {transform: scale(0.8);}
+  100% {transform: scale(1.15);}
+}
+@keyframes crescendo2 {
+  0%   {transform: scale(0.6);}
+  100% {transform: scale(1.25);}
+}
+
+@keyframes infiniteScroll {
+    from {
+        transform: translateX(0)
+    }
+
+    to {
+        transform: translateX(-50%)
+    }
+}
