アニメーション追加

--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -101,6 +101,10 @@
     animation: rotation 8s linear infinite;
 }
 
+.service__column--bg {
+    animation: rotation 8s linear infinite;
+}
+
 @keyframes rotation {
     0% {
         transform: rotate(0deg);
