--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -1,21 +1,53 @@
+.initial-anime {
+    opacity: 0;
+}
+
 /*ポップアップする動き*/
 .popup {
-    animation: popup 0.8s cubic-bezier(0.5, 0.05, 0.1, 0.3) forwards;
+    animation: popup 0.6s cubic-bezier(0.5, 0.05, 0.1, 0.3) forwards;
     opacity: 0;
 }
 @keyframes popup {
     0% {
         transform: scale(0);
-        opacity: 0;
+        -webkit-transform: scale(0);
+        opacity: 0.6;
     }
-    50% {
-        transform: scale(1.2);
+    60% {
+        transform: scale(1.3);
+        -webkit-transform: scale(1.3);
     }
     100% {
         transform: scale(1);
+        -webkit-transform: scale(1);
         opacity: 1;
     }
 }
+/*キラキラアニメーション*/
+.star01 {
+    animation: starAnime01 1.6s cubic-bezier(0.36, 0, 0.66, -0.56) infinite;
+}
+.star02 {
+    animation: starAnime02 1.6s cubic-bezier(0.36, 0, 0.66, -0.56) infinite;
+    animation-delay: 0.2s;
+}
+.star03 {
+    animation: starAnime02 1.6s cubic-bezier(0.36, 0, 0.66, -0.56) infinite;
+    animation-delay: 0.4s;
+}
+
+@keyframes starAnime01 {
+    0%   { transform: rotate(0deg) scale(1);}
+    50%  { transform: rotate(20deg) scale(0.4);}
+    100% { transform: rotate(0deg) scale(1);}
+}
+
+@keyframes starAnime02 {
+    0%   { transform: rotate(0deg) scale(1);}
+    50%  { transform: rotate(-20deg) scale(0.4);}
+    100% { transform: rotate(0deg) scale(1);}
+}
+
 
 
 /*　左の動き　*/
@@ -68,28 +100,43 @@
         transform: translateY(0);
     }
 }
-
-/* スクロールをしたら出現する要素にはじめに透過0を指定　*/
 .fadeUpTrigger{
     opacity: 0;
 }
 
 /* slide-in */
 .slide-inLeft {
+    animation: slide-inLeft 1s ease-out forwards;
+    animation-delay: 1s;
     opacity: 0;
-    transform: translateX(-100%);
-    transition: all 1s ease-out;
 }
 
 .slide-inRight {
+    animation: slide-inRight 1s ease-out forwards;
+    animation-delay: 1s;
     opacity: 0;
-    transform: translateX(100%);
-    transition: all 1s ease-out;
 }
 
-.slide-inLeft.visible, .slide-inRight.visible {
-    opacity: 1;
-    transform: translateX(0);
+@keyframes slide-inRight {
+    0% {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes slide-inLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
 /* rotate */
@@ -102,6 +149,10 @@
 }
 
 .service__column--bg {
+    animation: rotation 8s linear infinite;
+}
+
+.line__stamp--bg {
     animation: rotation 8s linear infinite;
 }
 
@@ -134,6 +185,14 @@
     animation: MoveLeft2 30s infinite linear;
 }
 
+.infinite__scroll img:nth-child(odd) {
+    animation: MoveLeft 20s -10s infinite linear;
+}
+
+.infinite__scroll img:nth-child(even) {
+    animation: MoveLeft2 20s infinite linear;
+}
+
 @keyframes MoveLeft {
     from {
         transform: translateX(100%);
@@ -150,4 +209,147 @@
     to {
         transform: translateX(-200%);
     }
+}
+
+/*リピート率の秘密アニメーション*/
+.movingRightChara {
+    animation: moveCharaRight 0.8s cubic-bezier(.77,-0.48,.21,1.46);
+}
+
+.movingLeftChara {
+    animation: moveCharaLeft 0.8s cubic-bezier(.77,-0.48,.21,1.46);
+}
+
+@keyframes moveCharaRight {
+    from {
+        transform: translateX(-100%);
+        opacity: 1;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes moveCharaLeft {
+    from {
+        transform: translateX(100%);
+        opacity: 1;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+/*ドライブアニメーション*/
+.driving {
+    animation: driving 2s ease-in-out;
+    opacity: 1;
+}
+.shaking {
+    animation: shaking 1.8s linear infinite;
+}
+
+@keyframes shaking {
+    0% {
+        translate: 0 1px;
+    }
+    0% {
+        translate: 0 0;
+    }
+    10% {
+        translate: 0 1px;
+    }
+    15% {
+        translate: 0 0px;
+    }
+    20% {
+        translate: 0 1px;
+    }
+    25% {
+        translate: 0 0px;
+    }
+    30% {
+        translate: 0 1px;
+    }
+    35% {
+        translate: 0 0px;
+    }
+    40% {
+        translate: 0 1px;
+    }
+    45% {
+        translate: 0 0px;
+    }
+    50% {
+        translate: 0 2px;
+    }
+    55% {
+        translate: 0 0px;
+    }
+    60% {
+        translate: 0 1px;
+    }
+    65% {
+        translate: 0 0px;
+    }
+    70% {
+        translate: 0 1.5px;
+    }
+    75% {
+        translate: 0 0px;
+    }
+    80% {
+        translate: 0 2px;
+    }
+    85% {
+        translate: 0 0px;
+    }
+    90% {
+        translate: 0 -5px;
+    }
+    95% {
+        translate: 0 1px;
+    }
+    100% {
+        translate: 0 0;
+    }
+}
+
+@keyframes driving {
+    0% {
+        translate: 50vw 0;
+        opacity: 1;
+    }
+    100% {
+        left: 50%;
+        position: absolute;
+        transform: translateX(-50%);
+        width: 100%;
+        z-index: 20;
+        opacity: 1;
+    }
+}
+
+/*animetion delay*/
+.delay-time02 {
+    animation-delay: 0.2s;
+}
+.delay-time04 {
+    animation-delay: 0.4s;
+}
+.delay-time06 {
+    animation-delay: 0.6s;
+}
+.delay-time08 {
+    animation-delay: 0.8s;
+}
+.delay-time10 {
+    animation-delay: 1s;
+}
+.delay-time12 {
+    animation-delay: 1.2s;
+}
+.delay-time14 {
+    animation-delay: 1.4s;
 }
