--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -622,6 +622,17 @@ footer
 .movingChara__load img {
   width: 100%;
 }
+.load__bg {
+  position: absolute;
+  width: 100%;
+  height: 96%;
+  background-color: #808080;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  -webkit-transform: translateY(-50%) translateX(-50%);
+}
 .footer__container {
   margin: 0 auto;
   width: 100%;
