--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -625,13 +625,14 @@ footer
 .load__bg {
   position: absolute;
   width: 100%;
-  height: 96%;
+  height: 92%;
   background-color: #808080;
   z-index: -1;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
   -webkit-transform: translateY(-50%) translateX(-50%);
+  border: 4px solid #231815;
 }
 .footer__container {
   margin: 0 auto;
