--- a/src/assets/css/anime.css
+++ b/src/assets/css/anime.css
@@ -331,6 +331,23 @@
     }
 }
 
+/*news page*/
+.cycling {
+    animation: cycling 3s linear forwards;
+}
+
+/*範囲外から出現させる*/
+@keyframes cycling {
+    0% {
+        transform: translateX(-30vw);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
 /*animetion delay*/
 .delay-time02 {
     animation-delay: 0.2s;
